# socket-serve-test

./: CMakeLists.txt  README.md
examples/: client.cpp
examples/echo_server/: CMakeLists.txt  server.cpp
include/: epoll.h  server.h  server_connection.h
ref/: a.out  epoll.c  sysinfo.cpp  test.cpp
src/: CMakeLists.txt  configs.h  epoll.cpp  main.cpp  responses.cpp  server.cpp  server_connection.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  client.cpp  test_01.cpp
